k8s-manifests/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netflix-clone-netpol
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: netflix-clone
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector: {}
        - ipBlock:
            cidr: 192.168.0.0/16   # <-- replace with your actual VPC CIDR
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
    - to:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 443
